--- a/index.html
+++ b/index.html
@@ -103,6 +103,27 @@
 
 </section>
 
+  <!-- about section -->
+<section class="about">
+  <div class="about__container">
+    <!-- Left Side: Image -->
+    <div class="about__image">
+      <img src="image/about.jpg" alt="About SIT">
+    </div>
+
+    <!-- Right Side: Text -->
+    <div class="about__content">
+      <h2 class="about__title">Welcome to <span class="about__highlight">SIT</span></h2>
+      <p class="about__text">
+       At Suffah Institute of Technology, we specialize in cutting-edge tech education that blends innovation with hands-on learning. Our distinguished faculty and modern resources are dedicated to fostering your growth and success in the tech industry.
+       </p> <br>
+       <p>Expert Trainers </p>
+       <p>Interview Preparation</p> 
+       <p> Job Placement</p>
+      <a href="#" class="about__button">Read More</a>
+    </div>
+  </div>
+</section>
 
      
 
